<resources>
    <string name="app_name">My App Portofolio</string>

    <string name="title">My Nanodegree Apps!</string>

    <string name="spotify">Spotify Streamer</string>
    <string name="super_duo_scores">Scores App</string>
    <string name="super_duo_library">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone</string>

    <string name="action_settings">Settings</string>
</resources>
