<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:text="@string/title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

    <Button
        style="@style/button"
        android:id="@+id/spotify"
        android:text="@string/spotify"
        android:onClick="sendMessage"/>
    <Button
        style="@style/button"
        android:id="@+id/scores"
        android:layout_below="@id/spotify"
        android:text="@string/super_duo_scores"
        android:onClick="sendMessage"/>
    <Button
        style="@style/button"
        android:id="@+id/library"
        android:layout_below="@id/scores"
        android:text="@string/super_duo_library"
        android:onClick="sendMessage"/>
    <Button
        style="@style/button"
        android:id="@+id/bigger"
        android:layout_below="@id/library"
        android:text="@string/build_it_bigger"
        android:onClick="sendMessage"/>
    <Button
        style="@style/button"
        android:id="@+id/xyz"
        android:layout_below="@id/bigger"
        android:text="@string/xyz_reader"
        android:onClick="sendMessage"/>
    <Button
        style="@style/button"
        android:id="@+id/capstone"
        android:layout_below="@id/xyz"
        android:text="@string/capstone"
        android:onClick="sendMessage"/>
    </RelativeLayout>
</RelativeLayout>
